{
    "name": "UserInput",
    "maps": [
        {
            "name": "User",
            "id": "6c88cc32-fbfc-47b9-9cc8-611ce32bb682",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "b2999e0f-4e3d-4bf1-9b74-f5eb69bce7a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "d98c7752-4af0-4a43-89bf-300f29de965a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickPress",
                    "type": "Button",
                    "id": "2b30eb9d-6c76-4c29-8801-ff67f6fbf38f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickPosition",
                    "type": "PassThrough",
                    "id": "95c56637-1ec7-4cd2-80ad-8ce45b88fdd7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Numpad",
                    "type": "Button",
                    "id": "5f16365e-894b-4358-bb87-c82f6fec7dfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Keyboard",
                    "type": "Button",
                    "id": "d8627e03-cdb9-45ae-acce-ee807d8ba0cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "32ff4980-9ecf-4726-8ee0-720eaa4b7df7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c147148-68fa-442f-b30b-451914a31e1b",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c81bc08-94f1-47ff-afba-8488a286f02e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "515dca3c-3a75-4349-9ec6-1f9b5df8a1ed",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dde06314-71fe-4393-8dcb-06aace554cb8",
                    "path": "<Keyboard>/numpadPeriod",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b41ec4de-0e69-43fa-9956-fabc4875b3c6",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b6396f5-4942-4d39-8c81-17fb1a827747",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa41e8a2-9e48-450b-9a8c-d13d00453b46",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dba63579-42d4-40fd-8383-725cb8bf9119",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69865600-c78d-4537-86ba-747e227f87a8",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22b1cf8c-1597-4dbf-9251-fabff12bd852",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63f0b3dd-2ffe-48c0-af3e-7731af77f773",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe455596-07bc-43e9-8b5c-18455f010fde",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5160586a-abde-4205-a376-588f794bc597",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7c53f7d-cd1d-4312-acb7-2bf35f5aa23d",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "caa27373-4588-4367-ba87-136b48a2dbf4",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21c70d0f-3909-48e8-98a5-64fe051b1138",
                    "path": "<Keyboard>/numLock",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9919f8f-647b-4c3a-9aa0-d47fcd19071c",
                    "path": "<Keyboard>/numpadDivide",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8133b439-1268-4f11-b988-57ae4f7d6f4e",
                    "path": "<Keyboard>/numpadMultiply",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afa4c434-6b91-4d49-b4a9-d44fe2e4e3bf",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Numpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b35279fa-2565-48b1-b9c1-ae697a65c78b",
                    "path": "<Keyboard>/0",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66e702d5-5c51-41c8-8fec-552d666e39a1",
                    "path": "<Keyboard>/period",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd08ec03-e28a-4d31-a3b6-bfe544c919e9",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39589f92-b5c5-4d42-8e32-210776195df9",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33b73d68-718b-4b5b-873c-f659295de988",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c4bc298-9db5-4ca5-aaba-116b9f2d3c49",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc8a7141-33d8-485a-b3ba-0274f4f0883c",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77d822fb-9928-4270-9e55-249cf7a255b5",
                    "path": "<Keyboard>/5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "446d5cee-1d82-4b10-a1ca-b5ee059b6f9f",
                    "path": "<Keyboard>/6",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d3a5173-8085-44f5-b8bf-608e1ea4f7e5",
                    "path": "<Keyboard>/7",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd6807d0-82b5-4e75-837b-bd09b4403460",
                    "path": "<Keyboard>/9",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6887d64b-7428-4824-99a8-fefff3109d11",
                    "path": "<Keyboard>/8",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e7c76d4-ef10-42e4-85e5-91f9ab3cab4e",
                    "path": "<Keyboard>/backspace",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4dadf69-394e-4faf-a216-8a7a59b01959",
                    "path": "<Keyboard>/slash",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73e32a4a-2089-4a30-bddb-b2557846e3fe",
                    "path": "<Keyboard>/equals",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e963045-a340-4311-a04c-3c18a51fa18b",
                    "path": "<Keyboard>/minus",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81fe928c-7f9e-4f36-be84-7c3acb08add0",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c31da5a6-9727-4013-a05e-c489540fac7a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfb6f5f9-c51b-422d-937b-d11790dd94bc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}